kubernetes/apps/observability/cribl/leader/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cribl-leader
spec:
  hostnames:
    - "${HOSTNAME:=${APP}}.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: cribl-leader
          namespace: observability
          port: 9000
