kubernetes/apps/observability/cribl/leader/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cribl-leader
spec:
  ingressClassName: internal
  rules:
    - host: "${HOSTNAME:=${APP}}.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: cribl-leader
                port:
                  number: 9000
            path: /
            pathType: Prefix
